--- a/task-react/src/App.css
+++ b/task-react/src/App.css
@@ -1,10 +1,21 @@
+html,
 body {
-  background-color: #fce4ec; /* Rosa bebê */
-  color: #4e342e; /* Marrom */
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fce4ec;
+  /* Rosa bebê */
+  color: #4e342e;
+  /* Marrom */
   font-family: Arial, sans-serif;
   text-align: center;
 }
-
 h1 {
   font-family: 'Dancing Script', cursive; /* Letra emendada */
   font-size: 3rem;
@@ -18,6 +29,8 @@ h1 {
   border-radius: 10px;
   background: #ffffff;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  align-items: center;
 }
 
 .table {
